# codenames_ai

./: README.md
backend/: .gitignore  Cargo.toml  Rocket.toml
backend/src/: main.rs
frontend/: .eslintrc.json  next.config.js  package-lock.json  package.json
frontend/components/: Board.js  ContainerList.js  ManualBoard.js
frontend/modules/: constants.js  format.js  utils.js
frontend/pages/: _app.js  _document.js  horsepaste.js  index.js  manual.js
frontend/pages/api/: horsepaste-click-tile.js  horsepaste-end-turn.js  horsepaste-get-state.js  horsepaste-new-game.js
frontend/pages/horsepaste/: [key].js
frontend/styles/: Common.module.css  Game.module.css  Home.module.css  globals.css
v1/backend/: cached.py  decorator.py  dict_test.py  glove.py  server.py  sim.py  stem.py  test.py
v1/frontend/: next.config.js  package-lock.json  package.json
v1/frontend/modules/: format.js
v1/frontend/pages/: index.js
v1/frontend/pages/api/: hello.js  horsepaste-click-tile.js  horsepaste-end-turn.js  horsepaste-new-game.js  horsepaste.js
v1/frontend/styles/: globals.css
