[package]
name = "codenames_bot"
version = "0.1.0"
authors = ["Alexander C <gitlab@femto.host>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.11", features = ["serde", "rayon"] }
rocket = "0.4.10"
rocket_contrib = "0.4.10"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
rust-stemmers = "1.2.0"
lazy_static = "1.4.0"
rayon = "1.5.0"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }

[profile.release]
debug = true